--- a/.github/workflows/gen-ascii.yml
+++ b/.github/workflows/gen-ascii.yml
@@ -10,7 +10,7 @@ jobs:
     - name: Install Cowsay Program
       run: sudo apt-get install cowsay -y 
     - name: Exec Cowsay CMD
-      run: cowsay 0f dragon "Run for cover, I am a DRAGON...RAWR" >> dragon.txt 
+      run: cowsay -f dragon "Run for cover, I am a DRAGON...RAWR" >> dragon.txt 
     - name: Test file exists 
       run: grep -i "dragon" dragon.txt
     - name: Read file
