--- a/.github/workflows/gen-ascii.yml
+++ b/.github/workflows/gen-ascii.yml
@@ -11,7 +11,7 @@ jobs:
       run: ls -latr
     - name: Executing Shell Script 
       run: |
-        chmod +x ascii-script.sh
+        chmod +x ../ascii-script.sh
         ./ascii-script.sh 
 
     
