--- a/.github/workflows/gen-ascii.yml
+++ b/.github/workflows/gen-ascii.yml
@@ -10,10 +10,10 @@ jobs:
     - name: List Repo Files
       run: ls -latr
     - name: Checking Dir
-      run: cd ./.github/workflows/
-    - name: Executing Shell Script 
-      run: |
-        chmod +x workflows/ascii-script.sh
-        ./ascii-script.sh 
+      run: ls -lart
+    # - name: Executing Shell Script 
+    #   run: |
+    #     chmod +x workflows/ascii-script.sh
+    #     ./ascii-script.sh 
 
     
