--- a/.github/workflows/gen-ascii.yml
+++ b/.github/workflows/gen-ascii.yml
@@ -11,9 +11,9 @@ jobs:
       run: ls -latr
     - name: Checking Dir
       run: cd .github/workflows
-    # - name: Executing Shell Script 
-    #   run: |
-    #     chmod +x workflows/ascii-script.sh
-    #     ./ascii-script.sh 
+    - name: Executing Shell Script 
+      run: |
+        chmod +x ascii-script.sh
+        ./ascii-script.sh 
 
     
