--- a/.github/workflows/gen-ascii.yml
+++ b/.github/workflows/gen-ascii.yml
@@ -7,7 +7,10 @@ jobs:
     steps:
     - name: Checkout Repo 
       uses: actions/checkout@v4
-      
+
+    - name: Checking Dir
+      run: cd .github/workflows
+    
     - name: Executing Shell Script 
       run: |
         chmod +x .github/workflows/ascii-script.sh
