--- a/.github/workflows/gen-ascii.yml
+++ b/.github/workflows/gen-ascii.yml
@@ -9,11 +9,12 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Checking Dir
-      run: cd .github/workflows
+      run: 
     
     - name: Executing Shell Script 
       run: |
-        chmod +x .github/workflows/ascii-script.sh
-        ./github/workflows/ascii-script.sh 
+        cd .github/workflows
+        chmod +x ascii-script.sh
+        ./ascii-script.sh 
 
     
